adjusted eclipse build script