@@ -1,16 +1,13 @@
 #!/bin/bash
 
 ## settings
-ECLIPSE=/opt/eclipse/eclipse
-WORKSPACE=/home/eclipse-build/workspace
+WORKDIR=/home/eclipse-build/workdir
 PROJECT=MeshConf
 WARDIR=/home/eclipse-build/build
-VMARGS="-Xmx512M -XX:MaxPermSize=128M -Djava.library.path=/usr/lib/jni"
-
 DEPLOYFILE=webserver:/var/lib/tomcat5.5/webapps/$PROJECT.war
-VERSIONFILE=$WORKSPACE/$PROJECT/src/net/umic_mesh/meshconf/common/Version.java
-
-## END SETTIGNS
+VERSIONFILE=$WORKDIR/src/net/umic_mesh/meshconf/common/Version.java
+DOCDIR=/home/eclipse-build/public_html/
+## END SETTINGS
 
 TMPFILE=$(mktemp -p /tmp eclipse-build.XXXXXX)
 
@@ -18,21 +15,28 @@ echo "Reverting $VERSIONFILE..."
 svn revert $VERSIONFILE 2>&1 | tee $TMPFILE
 
 echo "Syncing with repository..."
-svn up $WORKSPACE/$PROJECT
+svn up $WORKDIR
 
-REV=$(svnversion $WORKSPACE/$PROJECT)
+REV=$(svnversion $WORKDIR)
 WARFILE=$WARDIR/$PROJECT-r$REV.war
 
 echo "Modifying $VERSIONFILE..."
 sed -i "s/@PLACEHOLDER@/r$REV/g" $VERSIONFILE
 
-echo "Cleaning and building workspace..."
-$ECLIPSE --launcher.suppressErrors -nosplash -application org.eclipse.jdt.apt.core.aptBuild -data $WORKSPACE -vmargs $VMARGS 2>&1 | tee $TMPFILE
+echo "Cleaning workdir..."
+ant -f $WORKDIR/build.xml clean | tee $TMPFILE
 
-echo "Exporting $PROJECT to $WARFILE..."
-$ECLIPSE --launcher.suppressErrors -nosplash -application in.cypal.studio.gwt.core.ExportWar -data $WORKSPACE -dest $WARFILE -project $PROJECT -vmargs $VMARGS 2>&1 | tee -a $TMPFILE
+echo "Invoking ant..."
+cd $WORKDIR
+ant -f $WORKDIR/build.xml -Dwar.destfile=$WARFILE war | tee $TMPFILE
+RC=$?
+if [ $RC -ne 0 ]; then
+  echo "Ant exited with $RC. Not deploying.";
+  rm $TMPFILE;
+  exit 1;
+fi;
 
-if grep "error" $TMPFILE; then
+if grep -i "error" $TMPFILE; then
   echo "Build failed with error. Not deploying.";
   rm $TMPFILE;
   exit 1;
@@ -47,3 +51,6 @@ scp $WARFILE $DEPLOYFILE
 #echo "Restarting tomcat5..."
 #ssh webserver "sudo /etc/init.d/tomcat5 restart </dev/null >/dev/null 2>/dev/null"
 echo "Done."
+
+echo "Generating javadoc..."
+ant -f $WORKDIR/build.xml javadoc
